feat: 🎸 Added GET: /api/file for getting of IPFS files
